--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 @import "reset.css";
-@import "varialbles.css";
-@import "status-bar.css";
+@import "variables.css";
+/* Components*/
+@import "components/status-bar.css";
+/* Screens */
+@import "screens/login.css";
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -21,27 +24,4 @@ body {
 .welcome-header__text {
   width: 60%;
   opacity: 0.7;
-}
-
-#login-form {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 30px;
-}
-
-#login-form input {
-  padding: 15px 0px;
-  border: none;
-  font-size: 18px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin-bottom: 25px;
-  transition: border-color 0.3s ease-in-out;
-}
-
-#login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus {
-  border-color: var(--yellow);
 }
