--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -1,37 +1,37 @@
-#login-form {
+.login-form {
   display: flex;
   flex-direction: column;
   margin: 0px 30px;
 }
 
-#login-form input {
+.login-form__input {
   padding: 15px 0px;
   border: none;
   font-size: 18px;
   margin-bottom: 25px;
-}
-
-#login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus {
-  border-color: var(--yellow);
-}
-
-#login-form :not([type="submit"]) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   transition: border-color 0.3s ease-in-out;
 }
 
-#login-form input[type="submit"] {
+.login-form__input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.login-form__input:focus {
+  border-color: var(--yellow);
+}
+
+.login-form__submit {
   background-color: var(--yellow);
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
+  border: none;
+  margin-bottom: 25px;
+  font-size: 18px;
 }
 
-#login-form a {
+.login-form__a {
   text-align: center;
   text-decoration: none;
   color: inherit;
