--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -15,4 +15,20 @@
 
 .nav_link {
   color: #2e363e;
+  position: relative;
+}
+
+.nav__notification {
+  background-color: tomato;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  border-radius: 15px;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  color: white;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
 }
