--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,10 +3,11 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 600;
 }
 
