--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,8 +1,8 @@
 .user-component {
-  display: flex;
   justify-content: space-between;
 }
 
+.user-component,
 .user-component__column:first-child {
   display: flex;
   align-items: center;
@@ -21,7 +21,7 @@
 }
 
 .user-component__subtitle {
-  font-size: 17px;
+  font-size: 13px;
   margin-top: 8px;
   color: rgba(0, 0, 0, 0.5);
 }
@@ -43,5 +43,13 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-component__time {
+  margin-bottom: 10px;
+  display: block;
 }
