--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
@@ -29,4 +30,8 @@ body {
 .welcome-header__text {
   width: 60%;
   opacity: 0.7;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
