--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -15,15 +15,22 @@
   margin-right: 20px;
 }
 
+.user-component__text__exclamation {
+  color: red;
+  display: flex;
+  align-items: center;
+}
+
 .user-component__title {
   font-weight: 600;
   font-size: 22px;
+  margin-bottom: 8px;
 }
 
 .user-component__subtitle {
   font-size: 13px;
-  margin-top: 8px;
   color: rgba(0, 0, 0, 0.5);
+  margin-right: 5px;
 }
 
 .user-component__avatar--xl {
