--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -10,7 +10,33 @@
   font-size: 30px;
   font-weight: 600;
 }
+.screen-header__icons {
+  position: relative;
+}
 
 .screen-header__icons span {
   padding-left: 25px;
+}
+
+.cog_notification {
+  background-color: tomato;
+  width: 5px;
+  height: 5px;
+  border-radius: 2.5px;
+  position: absolute;
+  right: -6px;
+  top: -7px;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(180deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
 }
